syntax = "proto3";
package dalalstreet.api.actions;

option java_multiple_files=true;

import "models/MortgageDetail.proto";

message GetMortgageDetailsRequest {
//    Yeah. Empty. No parameters required here.
}

message GetMortgageDetailsResponse {
    enum StatusCode {
        OK = 0;
        InternalServerError = 1;
    }
    StatusCode status_code = 1;
    string     status_message = 2;
    repeated models.MortgageDetail mortgage_details = 3;
}
