syntax = "proto3";
package dalalstreet.api.actions;

option java_multiple_files=true;

import "models/User.proto";

message GetPortfolioRequest {
}

message GetPortfolioResponse {
    enum StatusCode {
        OK = 0;
        InternalServerError = 1;
        InvalidCredentialsError = 2;
    }
    StatusCode status_code = 1;
    string     status_message = 2;
    string      session_id = 3;
    models.User user = 4;
    map<uint32, int64>          stocks_owned = 5;
}
