syntax = "proto3";
package dalalstreet.api.actions;

option java_multiple_files=true;

import "models/Transaction.proto";

message MortgageStocksRequest {
    uint32 stock_id = 1;
    uint64 stock_quantity = 2;
}

message MortgageStocksResponse {
    enum StatusCode {
        OK = 0;
        InternalServerError = 1;
        MarketClosedError = 2;
        InvalidStockIdError = 3;
        NotEnoughStocksError = 4;
    }
    StatusCode status_code = 1;
    string     status_message = 2;

    models.Transaction transaction = 3;
}
