syntax = "proto3";
package dalalstreet.api.actions;

option java_multiple_files=true;

import "models/Transaction.proto";

message RetrieveMortgageStocksRequest {
    uint32 stock_id = 1;
    uint64 stock_quantity = 2;
    uint64 retrieve_price = 3;
}

message RetrieveMortgageStocksResponse {
    enum StatusCode {
        OK = 0;
        InternalServerError = 1;
        MarketClosedError = 2;
        InvalidStockIdError = 3;
        InvalidRetrievePriceError = 4;
        NotEnoughStocksError = 5;
        NotEnoughCashError = 6;
    }
    StatusCode status_code = 1;
    string     status_message = 2;

    models.Transaction transaction = 3;
}
